[workspace]
members = ["protocol", "crypto", "crypto-utils", "dht-core", "relay", "p2p", "client", "bootstrap"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"
description = "NullNode P2P messenger (Rust)"
license = "BUSL-1.1"
authors = ["Andreas Mueller <https://www.gnoppix.com>"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
blake2 = "0.10"
argon2 = "0.5"
base64 = "0.22"
hex = "0.4"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
tokio-tungstenite = "0.26"
hmac = "0.12"
url = "2"
dirs = "5"
clap = { version = "4", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
sequoia-openpgp = "2"
futures = "0.3"
zeroize = { version = "1", features = ["zeroize_derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
