[package]
name = "nullnode-bootstrap"
version.workspace = true
edition = "2024"
description = "NullNode bootstrap DHT server (standalone binary)"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
rand.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
tokio-tungstenite.workspace = true
base64.workspace = true
dirs.workspace = true
blake2.workspace = true

sequoia-openpgp.workspace = true
nullnode-protocol = { path = "../protocol" }
nullnode-dht-core = { path = "../dht-core" }
nullnode-crypto = { path = "../crypto" }
ml-kem = "0.3"

[[bin]]
name = "nullnode-bootstrap"
path = "src/main.rs"
