[package]
name = "nullnode-crypto"
version.workspace = true
edition.workspace = true
description = "NullNode cryptographic primitives (AES-256-GCM encrypt/decrypt, double ratchet)"

[dependencies]
sha2.workspace = true
hex.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
base64.workspace = true
aes-gcm = "0.10"
hkdf = "0.12"
ml-kem = { version = "0.3.2", features = ["getrandom"] }
libc = "0.2"

nullnode-protocol = { path = "../protocol" }
