[package]
name = "nullnode-dht-core"
version.workspace = true
edition.workspace = true
description = "NullNode DHT storage layer with SQLite persistence, Kademlia routing, and TOFU pinning"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
rand.workspace = true
thiserror.workspace = true
tracing.workspace = true
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
nullnode-protocol = { path = "../protocol" }
tokio-tungstenite.workspace = true
futures.workspace = true
dirs.workspace = true
base64.workspace = true
hmac.workspace = true
chrono = { version = "0.4", features = ["serde"] }
blake2.workspace = true
sequoia-openpgp.workspace = true
rustls = { version = "0.23", features = ["ring"] }
rustls-native-certs = "0.8"
x509-parser = "0.16"
tokio-rustls = "0.26"
rustls-pemfile = "2"
