[package]
name = "nullnode-protocol"
version.workspace = true
edition.workspace = true
description = "NullNode protocol constants, wire envelope, and PoW"

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
rand.workspace = true
thiserror.workspace = true
tracing.workspace = true
argon2.workspace = true
blake2.workspace = true
sequoia-openpgp.workspace = true

[lib]
name = "nullnode_protocol"
path = "src/lib.rs"
