[package]
name = "nullnode-relay"
version.workspace = true
edition.workspace = true
description = "NullNode relay server (store-and-forward)"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
hmac.workspace = true
rand.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio-tungstenite.workspace = true
tokio-rustls = "0.26"
rustls-pemfile = "2"
sqlx.workspace = true
futures.workspace = true
clap.workspace = true
base64.workspace = true
dirs.workspace = true
sequoia-openpgp.workspace = true
aes-gcm.workspace = true
hkdf.workspace = true

nullnode-protocol = { path = "../protocol" }
nullnode-dht-core = { path = "../dht-core" }
nullnode-crypto = { path = "../crypto" }

[[bin]]
name = "nullnode-relay"
path = "src/main.rs"
